--- a/software.html
+++ b/software.html
@@ -44,29 +44,29 @@
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/lifesize/job/oKFD7fwT'>Lifesize, Inc. Careers - Senior Software Engineer (VoIP, Python)</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Austin North Carolina</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/elementai/jobs/1785999'>Job Application for D?veloppeur(euse) front-end - Knowledge Scout | Front-End Software Developer - Knowledge Scout at Element AI</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://effectory.recruitee.com/o/junior-software-developer'>
       Junior Software Developer - Effectory
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://effectory.recruitee.com/o/senior-software-developer'>
       Senior Software Developer - Effectory
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://effectory.recruitee.com/o/software-developer-amsterdam'>
       Software Developer - Effectory
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/liveramp/jobs/1767629'>Job Application for Software Engineer - Frontend at LiveRamp</a></h5> 
@@ -149,7 +149,7 @@
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4345528002'>Job Application for Sr. Software Engineer (Node.js) at Cast & Crew Entertainment Services, LLC</a></h5> 
+<h5><a href='https://boards.greenhouse.io/113134/jobs/4345528002'>Job Application for Sr. Software Engineer (Node.js) at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -157,11 +157,11 @@
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4345557002'>Job Application for Sr. Software Engineer (Java) at Cast & Crew Entertainment Services, LLC</a></h5> 
+<h5><a href='https://boards.greenhouse.io/113134/jobs/4345557002'>Job Application for Sr. Software Engineer (Java) at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4346436002'>Job Application for Sr. Software Engineer (Javascript) at Cast & Crew Entertainment Services, LLC</a></h5> 
+<h5><a href='https://boards.greenhouse.io/113134/jobs/4346436002'>Job Application for Sr. Software Engineer (Javascript) at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -173,7 +173,7 @@
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/113134/jobs/4371357002'>Job Application for Sr. Software Engineer (.NET/C#) at Cast & Crew Entertainment Services, LLC</a></h5> 
+<h5><a href='https://boards.greenhouse.io/113134/jobs/4371357002'>Job Application for Sr. Software Engineer (.NET/C#) at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -201,7 +201,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -217,7 +217,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/deltadental/b5acfab8-0099-4f05-9762-ff219fb2516a'>Delta Dental - Senior Software Engineer - UI/UX</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/deltadental/b5acfab8-0099-4f05-9762-ff219fb2516a'>Delta Dental - Senior Software Engineer - UI/UX</a></h5> 
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -265,7 +265,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tucows/job/oQKrafwV'>Tucows Careers - Intermediate Software Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/tucows/job/oQKrafwV'>Tucows Careers - Intermediate Software Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -312,6 +312,10 @@
 <h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4369776002'>Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://qivos.workable.com/j/B1AA1383D4'>Backend Software Developer - Apply online - QIVOS - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 16, 2019 ... Apply online for the job of Backend Software Developer at QIVOS.</p>
 <hr/>
 <h5><a href='https://ecosia.workable.com/jobs/1066033'>Senior Software Developer: Frontend focus - Apply ... - Ecosia - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -461,10 +465,6 @@ requirements?...</p>
 <p>6 days ago ... This is a high-visibility technical leadership position with SIE's platform 
 engineering organization to establish a highly available, fault-tolerant, globally 
 distributed?...</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fender/jobs/1769114'>Job Application for Sr. Software Engineer, Android   at Fender</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
 <hr/>
 
 
